--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Supply 350</h5>
                   <p class="card-text">This is a amazing shoe. it give you more comfort in the summer. This content is a little bit longer.</p>
+                  <h2>$220</h2>
                 </div>
                 <div class="m-3">
                   <div class="btn btn-warning">Buy Now</div>
@@ -158,7 +159,8 @@
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Nike 360</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h2>$205</h2>
                 </div>
                 <div class="m-3">
                   <div class="btn btn-warning">Buy Now</div>
@@ -170,6 +172,53 @@
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text"> This card has even longer content than the first to show that equal height action.</p>
+                <h2>$240</h2>
+              </div>
+                <div class="m-3">
+                  <div class="btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Shoes section end  -->
+         <!-- Bags section start  -->
+         <section class="container my-5">
+          <h2>Bag</h2>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Baby Bag</h5>
+                  <h2>$150</h2>
+                  <p class="card-text">This is a amazing shoe. it give you more comfort in the summer. This content is a little bit longer.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Blue Safe Bag</h5>
+                <h2>$180</h2>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Black Pro Bag</h5>
+                <h2>$195</h2>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="m-3">
@@ -179,7 +228,7 @@
             </div>
           </div>
         </section>
-        <!-- Shoes section end  -->
+        <!-- Bags section end  -->
     </main>
 
     <script
