custom css added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- custom css  -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="container">
@@ -52,14 +54,14 @@
       <section class="mt-5">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-              <div class="carousel-item active border rounded bg-info p-5">
+              <div class="carousel-item active border rounded carousle-bg p-5">
                 <div class="row">
                     <div class="col-lg-7 d-flex align-items-center">
                         <div>
                             <h2>Cool Dude Headphone</h2>
                             <p>This is amazing product, if you try this you are fan this item. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat porro suscipit sapiente obcaecati aut ad.</p>
                             <h1>$450</h1>
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn common-btn">Buy Now</div>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -67,14 +69,14 @@
                     </div>
                 </div>
               </div>
-              <div class="carousel-item  border rounded bg-info p-5">
+              <div class="carousel-item  border rounded carousle-bg p-5">
                 <div class="row">
                     <div class="col-lg-7 d-flex align-items-center">
                         <div>
                             <h2>Mega LCD TV For Sports</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>$1200</h1>
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn common-btn">Buy Now</div>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -82,14 +84,14 @@
                     </div>
                 </div>
               </div>
-              <div class="carousel-item border rounded bg-info p-5">
+              <div class="carousel-item border rounded carousle-bg p-5">
                 <div class="row">
                     <div class="col-lg-7 d-flex align-items-center">
                         <div>
                             <h2>X-Box for your living room</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>$600</h1>
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn common-btn">Buy Now</div>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -113,8 +115,8 @@
     <main>
         <!-- categories start -->
         <section>
-            <div class="container my-5 text-center">
-                <div class="row g-2">
+            <div class="container my-5 text-center ">
+                <div class="row g-4 categories">
                   <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="p-3 border bg-warning rounded d-flex align-items-center justify-content-around">
                         <h1 class="text-white">Watch</h1>
@@ -150,7 +152,7 @@
                   <h2>$220</h2>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn common-btn">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -163,7 +165,7 @@
                 <h2>$205</h2>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn common-btn">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -176,7 +178,7 @@
                 <h2>$240</h2>
               </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn common-btn">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -196,7 +198,7 @@
                   <p class="card-text">This is a amazing shoe. it give you more comfort in the summer. This content is a little bit longer.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn common-btn">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -209,7 +211,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn common-btn">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -222,7 +224,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn common-btn">Buy Now</div>
                 </div>
               </div>
             </div>
@@ -230,7 +232,7 @@
         </section>
         <!-- Bags section end  -->
         <!-- subscribe start  -->
-        <section style="height: 300px;" class="container rounded-3 d-flex align-items-center justify-content-center bg-info" id="subscribe">
+        <section style="height: 300px;" class="container rounded-3 d-flex align-items-center justify-content-center carousle-bg" id="subscribe">
           <div>
             <h2>LET'S STAY IN TOUCH</h2>
           <p>Gates update in touch and enjoy our offer.</p>
@@ -238,7 +240,7 @@
             <div class="mb-1">
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn common-btn">Submit</button>
           </form>
           </div>
         </section>
